--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,45 @@ article .fa {
     margin-right: 50px;
     box-shadow: 0px 0px 10px  #FFC107;
 }
+
+/*PORTFOLIO*/
+
+#portfolio {
+    display: none;
+    width: 100%;
+    height: 700px;
+    background: #3D4F58;
+}
+
+#portfolio:target {
+    display: block;
+    width: 100%;
+    height: 700px;
+    background: #3D4F58;
+}
+
+.line1, .line2, .line3 {
+    display: inline-block;
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    background-color: #95C2D7;
+    margin-top: 150px;
+    margin-left: 180px;
+}
+
+.col1 {
+    margin-left: 30px;
+}
+
+.col3 {
+    margin-left: 330px
+}
+
+.line2 {
+    margin-top: 300px;
+}
+
+.line3 {
+    margin-top: 450px;
+}
