--- a/css/style2.css
+++ b/css/style2.css
@@ -166,7 +166,7 @@ article .fa {
     height: 50px;
     background: #95C2D7;
     margin: 50px 0;
-    padding-left: 10%;
+    padding-left: 20%;
     box-shadow: 0px 0px 10px  #3E7F9E;
     z-index: 3;
 }
@@ -227,7 +227,7 @@ article .fa {
     top: 0;
     right: 0;
     width: 100%;
-    height: 993px;
+    height: 100vh;
     z-index: 2;
     background: #3D4F58;
     -webkit-animation: anim 1s 10ms normal ease-out forwards;
@@ -277,38 +277,12 @@ article .fa {
 
 /* RESPONSIVE MOBILE */
 
-@media (max-width:400px) {
+@media (max-width:768px) {
     html {
         background: red;
     }
     
-    .person {
-        width: 180%;
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-    
     .avatar {
-        width: 130%;
-        margin-left: -65%;
-    }
-    
-    .menu1 ul {
-        margin-top: 260%;
-        width: 200%;
-        margin-bottom: -60px;
-    }
-    
-    section .elmt {
-        width: 120%;
-        margin-left: 60%;
-    }
-    
-    section .logo {
-        margin-left: 20%;
-    }
-    
-    hr {
-        display: none;
-    }
+        
+    }    
 }
